--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,14 @@
 {
-  "homepage": "http://Fawez11.github.io/ChatGPT-",
-  "name": "client",
+  "name": "codex-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
-    "vite": "^4.1.0"
+    "vite": "^4.0.0"
   }
 }
